@@ -58,7 +58,7 @@ public class UserServiceImpl implements UserService {
     @Transactional
     @Override
     public boolean addUser(UserRequestDto userRequestDto) {
-        if (userRequestDto == null || userRequestDto.getEmail().isBlank()) {
+        if (userRequestDto == null || StringUtils.isBlank(userRequestDto.getEmail())) {
             throw new IllegalArgumentException(messageSource.getMessage("userService.IllegalArgument.message",
                     null, LocaleContextHolder.getLocale()));
         }
@@ -129,7 +129,7 @@ public class UserServiceImpl implements UserService {
     public String getUserNameAndNumber(TaskEntity taskEntity) {
         UserEntity assignee = userTaskHistoryService.getCurrentUserByTask(taskEntity);
         if (assignee == null) {
-            return "";
+            return StringUtils.EMPTY;
         }
         return String.format("%s %s %s", assignee.getFirstName(), assignee.getLastName(), assignee.getUserNumber());
     }
